--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,7 @@
   "liveSassCompile.settings.excludeList": ["**/node_modules/**", ".vscode/**"],
   "liveSassCompile.settings.generateMap": true,
   "liveServer.settings.port": 1236,
+  "colorize.colorized_variables": ["SASS"],
   "liveSassCompile.settings.autoprefix": null
+  /*"liveSassCompile.settings.autoprefix": ["> 1%","last 2 versions"],*/
 }
